- Fixed territory summaries not showing correctly on empty territories

--- a/style/scramblednations.css
+++ b/style/scramblednations.css
@@ -223,7 +223,7 @@ th.num {
   top: -15px;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 3px;
-  border: 1px solid black;
+  border: 1px solid rgb(128, 128, 128);
   font-size: 80%;
 }
 
